envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          http_filters:
            - name: "envoy.filters.network.http_connection_manager"
            - name: envoy.filters.http.grpc_web
              typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
            - name: envoy.filters.http.cors
              typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
            - name: envoy.filters.http.router
              typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts: 
              - name: production
                domains: ["production.chess.cloudboz.com"]
                routes: 
                  - match:
                      prefix: "/"
                    route:
                      cluster: production
                      max_grpc_timeout: 0s
                      max_stream_duration:
                        grpc_timeout_header_max: 0s
                cors:
                  allow_origin_string_match:
                    - prefix: "*"
                  allow_methods: GET, PUT, DELETE, POST, OPTIONS
                  allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                  max_age: "1728000"
                  expose_headers: custom-header-1,grpc-status,grpc-message
              - name: development
                domains: ["development.chess.cloudboz.com"]
                routes: 
                  - match:
                      prefix: "/"
                    route:
                      cluster: development
                      max_grpc_timeout: 0s
                      max_stream_duration:
                        grpc_timeout_header_max: 0s
                cors:
                  allow_origin_string_match:
                    - prefix: "*"
                  allow_methods: GET, PUT, DELETE, POST, OPTIONS
                  allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                  max_age: "1728000"
                  expose_headers: custom-header-1,grpc-status,grpc-message
  clusters: 
    - name: production
      connect_timeout: 1000s
      type: LOGICAL_DNS
      lb_policy: round_robin
      http2_protocol_options: 
        initial_stream_window_size: 65536
        initial_connection_window_size: 65536
      per_connection_buffer_limit_bytes: 1000000000
      load_assignment:
        cluster_name: production
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: app-production
                  port_value: 8085
    - name: development
      connect_timeout: 1000s
      type: LOGICAL_DNS
      lb_policy: round_robin
      http2_protocol_options: 
        initial_stream_window_size: 65536
        initial_connection_window_size: 65536
      per_connection_buffer_limit_bytes: 1000000000
      load_assignment:
        cluster_name: development
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: app-development
                  port_value: 8085

admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
